# reemc_mj_description

./: CMakeLists.txt  README.md
mc_mujoco/: reemc.in.yaml
meshes/assets/arm/: left_arm_1.stl  left_arm_2.stl  left_arm_3.stl  left_arm_4.stl  left_arm_5.stl  left_arm_6.stl  right_arm_1.stl  right_arm_1_collision.stl  right_arm_2.stl  right_arm_2_collision.stl  right_arm_3.stl  right_arm_3_collision.stl  right_arm_4.stl  right_arm_4_collision.stl  right_arm_5.stl  right_arm_5_collision.stl  right_arm_6.stl  right_arm_6_collision.stl
meshes/assets/base/: base_hcrmi.stl
meshes/assets/head/: head_1.stl  head_2_v1_hcrmi.stl
meshes/assets/hey5_hand/: left_hand_hey5_orientation.stl  left_hand_hey5_orientation_90.stl  right_hand_hey5_orientation.stl  right_hand_hey5_orientation_90.stl
meshes/assets/leg/: left_foot.stl  left_leg_1_hcrmi.stl  left_leg_4_hcrmi.stl  left_leg_4_hcrmi_90.stl  left_leg_6_hcrmi.stl  left_leg_6_hcrmi_90.stl  right_leg_1_hcrmi_90.stl  right_leg_3_collision.stl  right_leg_4_collision.stl  right_leg_4_hcrmi.stl  right_leg_4_hcrmi_-90.stl  right_leg_6_hcrmi.stl  right_leg_6_hcrmi_-90.stl
meshes/assets/torso/: torso_1_hcrmi.stl  torso_2.stl
xml/: reemc.xml  reemc_position.xml  reemc_scene.xml
