cmake_minimum_required(VERSION 3.10)

project(reemc_mj_description VERSION 1.0.0)

if(NOT TARGET mc_mujoco)
  find_package(mc_mujoco REQUIRED)
endif()

option(SRC_MODE "Use files in the repository instead of installed files" OFF)

set(REEMC_XML_MODEL_PATH "xml/reemc.xml")
set(REEMC_PDGAINS_PATH "pdgains/PDgains_sim.dat")

if(SRC_MODE)
  set(REEMC_XML_MODEL_PATH "${CMAKE_CURRENT_SOURCE_DIR}/${REEMC_XML_MODEL_PATH}")
  set(REEMC_PDGAINS_PATH "${CMAKE_CURRENT_SOURCE_DIR}/${REEMC_PDGAINS_PATH}")
else()
  set(REEMC_XML_MODEL_PATH "${MC_MUJOCO_SHARE_DESTINATION}/REEMC/${REEMC_XML_MODEL_PATH}")
  set(REEMC_PDGAINS_PATH "${MC_MUJOCO_SHARE_DESTINATION}/REEMC/${REEMC_PDGAINS_PATH}")
endif()

configure_file(mc_mujoco/reemc.in.yaml "${CMAKE_CURRENT_BINARY_DIR}/mc_mujoco/REEMC.yaml")
install(FILES "${CMAKE_CURRENT_BINARY_DIR}/mc_mujoco/REEMC.yaml" DESTINATION "${MC_MUJOCO_SHARE_DESTINATION}")

install(DIRECTORY meshes DESTINATION "${MC_MUJOCO_SHARE_DESTINATION}/REEMC" FILES_MATCHING PATTERN "*.stl" PATTERN "*.obj" PATTERN "*.png")
install(DIRECTORY xml DESTINATION "${MC_MUJOCO_SHARE_DESTINATION}/REEMC" FILES_MATCHING PATTERN "*.xml")
install(DIRECTORY assets DESTINATION "${MC_MUJOCO_SHARE_DESTINATION}/REEMC" FILES_MATCHING PATTERN "*.stl" PATTERN "*.obj" PATTERN "*.png")
install(DIRECTORY pdgains DESTINATION "${MC_MUJOCO_SHARE_DESTINATION}/REEMC" FILES_MATCHING PATTERN "*.dat")
